# larnestpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
conda.recipe/: meta.yaml
data/: ArgoNeuT_protons.csv  ArgoNeuT_protons_40.csv  ArgoNeuT_protons_50.csv  ArgoNeuT_protons_60.csv  ArgoNeuT_protons_80.csv  NIST_stopping_power.txt
notebooks/: ModelComparison.ipynb
src/larnestpy/: __init__.py  bindings.cxx
